-- =============================================================================
-- Novara — canonical PRODUCTION schema
-- =============================================================================
-- Source of truth reconstructed from the pilot database structure (DDL only,
-- NO user data). Captures the tables that live outside Drizzle migrations
-- (contacts, push_subscriptions, user_settings) plus the Drizzle-managed
-- feedback table, so a fresh production database is reproducible.
--
-- Run against the NEW Neon production branch/database only. Safe to re-run.
-- Do NOT run against the pilot database.
-- =============================================================================

-- ---- contacts ---------------------------------------------------------------
CREATE TABLE IF NOT EXISTS public.contacts (
    id                     uuid DEFAULT gen_random_uuid() NOT NULL,
    user_id                text NOT NULL,
    first_name             text NOT NULL,
    last_name              text NOT NULL,
    linkedin_url           text,
    company                text NOT NULL,
    role                   text,
    met_at                 text,
    importance             text DEFAULT 'Medium'::text NOT NULL,
    initial_follow_up_days integer DEFAULT 7 NOT NULL,
    follow_up_cadence_days integer DEFAULT 30 NOT NULL,
    first_contact_date     date DEFAULT CURRENT_DATE NOT NULL,
    last_interaction_date  date DEFAULT CURRENT_DATE NOT NULL,
    next_follow_up_date    date DEFAULT CURRENT_DATE NOT NULL,
    notes                  text,
    created_at             timestamp with time zone DEFAULT now() NOT NULL,
    updated_at             timestamp with time zone DEFAULT now() NOT NULL,
    email                  text,
    phone                  text,
    goal_tags              text[] DEFAULT '{}'::text[] NOT NULL,
    connection_status      text DEFAULT 'connected'::text NOT NULL,
    base_priority          text DEFAULT 'Medium'::text NOT NULL,
    current_priority       text DEFAULT 'Medium'::text NOT NULL,
    priority_override      boolean DEFAULT false NOT NULL,
    industry               text,
    function               text,
    interests              text[] DEFAULT '{}'::text[] NOT NULL,
    CONSTRAINT contacts_pkey PRIMARY KEY (id)
);
CREATE INDEX IF NOT EXISTS contacts_user_id_idx ON public.contacts USING btree (user_id);

-- ---- push_subscriptions -----------------------------------------------------
CREATE TABLE IF NOT EXISTS public.push_subscriptions (
    id         integer GENERATED BY DEFAULT AS IDENTITY,
    user_id    text NOT NULL,
    endpoint   text NOT NULL,
    p256dh     text NOT NULL,
    auth       text NOT NULL,
    created_at timestamp with time zone DEFAULT now(),
    CONSTRAINT push_subscriptions_pkey PRIMARY KEY (id),
    CONSTRAINT push_subscriptions_user_id_endpoint_key UNIQUE (user_id, endpoint)
);

-- ---- user_settings ----------------------------------------------------------
CREATE TABLE IF NOT EXISTS public.user_settings (
    user_id                     text NOT NULL,
    auto_downgrade_after_months integer DEFAULT 6 NOT NULL,
    career_statement            text DEFAULT ''::text NOT NULL,
    goal_tags                   text[] DEFAULT '{}'::text[] NOT NULL,
    created_at                  timestamp with time zone DEFAULT now() NOT NULL,
    updated_at                  timestamp with time zone DEFAULT now() NOT NULL,
    push_enabled                boolean DEFAULT false,
    notify_due_today            boolean DEFAULT true,
    notify_overdue              boolean DEFAULT true,
    notify_status_change        boolean DEFAULT true,
    notify_weekly_digest        boolean DEFAULT false,
    reminder_time               text DEFAULT '09:00'::text,
    has_seen_tutorial           boolean DEFAULT false NOT NULL,
    career_goals                text[] DEFAULT '{}'::text[] NOT NULL,
    CONSTRAINT user_settings_pkey PRIMARY KEY (user_id)
);

-- ---- feedback (also managed by Drizzle: lib/db/drizzle/0000_*.sql) -----------
CREATE TABLE IF NOT EXISTS public.feedback (
    id           uuid DEFAULT gen_random_uuid() NOT NULL,
    user_id      text NOT NULL,
    type         text NOT NULL,
    subject      text NOT NULL,
    description  text NOT NULL,
    contact_email text,
    may_contact  boolean DEFAULT false NOT NULL,
    page_url     text,
    user_agent   text,
    app_version  text,
    status       text DEFAULT 'new'::text NOT NULL,
    created_at   timestamp with time zone DEFAULT now() NOT NULL,
    updated_at   timestamp with time zone DEFAULT now() NOT NULL,
    CONSTRAINT feedback_pkey PRIMARY KEY (id)
);

-- Note: the original pilot used a serial sequence for push_subscriptions.id;
-- this file uses GENERATED BY DEFAULT AS IDENTITY, which is the modern
-- equivalent and avoids a detached sequence. Behavior is identical for the app.
